# crypto-trading-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: alembic.ini
alembic/versions/: 001_initial_migration.py
scripts/setup/: init_database.py  setup.sh
src/: __init__.py
src/api/: __init__.py  app.py
src/api/middleware/: auth.py  rate_limiting.py
src/api/v1/: __init__.py  dependencies.py
src/api/v1/routes/: __init__.py  analytics.py  monitoring.py  portfolio.py  strategies.py  trading.py
src/api/v1/schemas/: __init__.py  trading.py
src/core/: __init__.py  constants.py  events.py  exceptions.py  models.py
src/data/: __init__.py
src/data/collectors/: __init__.py  price_collector.py
src/data/processors/: __init__.py  cleaner.py
src/data/providers/: __init__.py  base.py  dexscreener.py
src/data/storage/: __init__.py
src/data/storage/cache/: __init__.py  redis_cache.py
src/data/storage/repositories/: __init__.py  price_repo.py  token_repo.py
src/monitoring/: prometheus.yml
tests/: conftest.py
tests/unit/test_api/: test_trading.py
tests/unit/test_data/: test_providers.py
